# linode-cli-build

./: .gitignore  BUILDWATCH_CAPABILITY_REFACTOR.md  BUILDWATCH_IMPLEMENTATION.md  CLOUD_INIT_SIZE_FIX.md  DASHBOARD_ADDED.md  INIT_WIZARD_IMPLEMENTATION.md  README.md  TUI_DESTROY_FEATURE.md  TUI_IMPLEMENTATION.md  linode-cli-ai-architecture.md  linode-cli-ai-phase1-plan.md  pyproject.toml
docs/: ARCHITECTURE.md  GUIDE.md  TEMPLATES.md  buildwatch-quick-reference.md  buildwatch-usage.md  capabilities.md  template-deployments.md  template-development.md  template-quick-reference.md
linodecli_ai/commands/: deploy.py  destroy.py  init.py  scaffold.py  templates.py
linodecli_ai/core/: capabilities.py  cloud_init.py  config.py  linode_api.py  llm_instructions_generator.py  project.py  registry.py  templates.py
linodecli_ai/templates/: index.yml
linodecli_ai/templates/chat-agent/: template.yml
linodecli_ai/templates/embeddings-bert/: template.yml
linodecli_ai/templates/embeddings-python/: template.yml
linodecli_ai/templates/llm-api/: template.yml
linodecli_ai/templates/ml-pipeline/: .env.example  template.yml
linodecli_ai/templates/vision-yolo/: template.yml
linodecli_build/commands/: __init__.py  base.py  deploy.py  destroy.py  init.py  status.py  tui.py
linodecli_build/core/: build_watcher.py  capabilities.py  cloud_init.py  deploy_operations.py  deployment_tracker.py  init_operations.py  templates.py
linodecli_build/tui/: __init__.py  api.py  app.py  styles.tcss  utils.py
linodecli_build/tui/screens/: __init__.py  (+5 more)
scripts/: build-watcher.py
(+14 files in other folders)
